"""empty message

Revision ID: f396e6ba3b2d
Revises: 
Create Date: 2025-02-20 16:09:45.978985

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'f396e6ba3b2d'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('profile',
    sa.Column('user_id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_name', sa.String(), nullable=True),
    sa.Column('password_hash', sa.String(), nullable=True),
    sa.Column('datetime', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('user_id')
    )
    with op.batch_alter_table('profile', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_profile_user_name'), ['user_name'], unique=False)

    op.create_table('tag',
    sa.Column('tag_id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('tag', sa.String(), nullable=True),
    sa.Column('datetime', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('tag_id')
    )
    op.create_table('image',
    sa.Column('image_id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('tag_id', sa.Integer(), nullable=True),
    sa.Column('caption', sa.String(), nullable=True),
    sa.Column('image_path', sa.String(), nullable=True),
    sa.Column('datetime', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['tag_id'], ['tag.tag_id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['profile.user_id'], ),
    sa.PrimaryKeyConstraint('image_id')
    )
    op.create_table('text',
    sa.Column('text_id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('tag_id', sa.Integer(), nullable=True),
    sa.Column('text', sa.String(), nullable=True),
    sa.Column('datetime', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['tag_id'], ['tag.tag_id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['profile.user_id'], ),
    sa.PrimaryKeyConstraint('text_id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('text')
    op.drop_table('image')
    op.drop_table('tag')
    with op.batch_alter_table('profile', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_profile_user_name'))

    op.drop_table('profile')
    # ### end Alembic commands ###
