Table profiles as prof {
    user_id integer [pk]
    user_name varchar [not null]
    password varchar
    Date datetime [not null, default: `now()`]
    Indexes {
        user_id [unique, name: "idx_profiles_user_id"]
    }
}

Table image as im {
    image_id integer [pk, increment]
    user_id integer
    image_name varchar [pk, not null]
    caption varchar
    tag_id integer [ref: > Tags.tag_id]
    Date datetime [not null, default: `now()`]
    Indexes {
        user_id [unique, name: "idx_profiles_user_id"]
        tag_id [name: "idx_image_tag_id"]
    }
}

Table Text as txt {
    text_id integer [pk, increment]
    user_id integer
    caption varchar [not null]
    Date datetime [not null, default: `now()`]
    Indexes {
        user_id [unique, name: "idx_profiles_user_id"]
    }
}

Table Tags {
    tag_id integer [pk, increment]
    tag_name varchar [not null]
    Date datetime [not null, default: `now()`]
    Indexes {
        tag_id [unique, name: "idx_tags_tag_id"]
    }
}

Ref: im.user_id > prof.user_id
Ref: prof.user_id > txt.user_id
